Update [Final] - Alcohol Consumption Analysis.ipynb

--- a/[Final] - Alcohol Consumption Analysis.ipynb
+++ b/[Final] - Alcohol Consumption Analysis.ipynb
@@ -1333,6 +1333,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import matplotlib.pyplot as plt\n",
     "def PlotPolly(model, independent_variable, dependent_variable, Name):\n",
     "    x_new = np.linspace(15,55,100)\n",
     "    y_new = model(x_new)\n",
@@ -1387,8 +1388,8 @@
     "p2 = np.poly1d(f2)\n",
     "p3 = np.poly1d(f3\n",
     "              )\n",
-    "print(\"With X=Beer:\\nBoth=\",p3)\n",
-    "print(\"With X=Wine:\\nBoth=\",p3)\n",
+    "print(\"With X=Beer:\\nBoth=\",p1)\n",
+    "print(\"With X=Wine:\\nBoth=\",p2)\n",
     "print(\"With X=Spirits:\\n\\nBoth=\",p3)"
    ]
   },
@@ -1411,7 +1412,7 @@
     }
    ],
    "source": [
-    "PlotPolly(p3,x1,y,'Beer vs Both Sexes')"
+    "PlotPolly(p1,x1,y,'Beer vs Both Sexes')"
    ]
   },
   {
@@ -1432,7 +1433,7 @@
     }
    ],
    "source": [
-    "PlotPolly(p6,x2,y,'Wine vs Both Sexes')"
+    "PlotPolly(p2,x2,y,'Wine vs Both Sexes')"
    ]
   },
   {
@@ -1441,7 +1442,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "PlotPolly(p9,x3,y,'Spirits vs Both Sexes')"
+    "PlotPolly(p3,x3,y,'Spirits vs Both Sexes')"
    ]
   },
   {
